infra/k8s/canary/ingress-canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nanovia-ingress-canary
  namespace: nanovia
  labels:
    app.kubernetes.io/name: nanovia-api-canary
    app.kubernetes.io/component: ingress
    app.kubernetes.io/managed-by: kustomize
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - api.nanovia.ca
      secretName: nanovia-tls
  rules:
    - host: api.nanovia.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nanovia-api-canary
                port:
                  number: 80
